Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,9 @@ steps:
     sdk: 'macosx10.15'
     configuration: 'Release clean build'
     xcWorkspacePath: 'SignPostWrapper.xcodeproj'
+
+- task: CopyFiles@2
+  inputs:
+    contents: '**/*.dylib'
+    targetFolder: '$(build.artifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
