Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 - task: MSBuild@1
   inputs:
     solution: '**/*.sln'
-    configuration: '$(BuildConfiguration)'
+    configuration: 'Release'
     clean: true
 
 - task: NuGetCommand@2
