--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ pool:
   vmImage: 'macos-latest'
 
 steps:
+
 - task: Xcode@5
   inputs:
     actions: 'clean build'
@@ -22,7 +23,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    contents: '**/*.dylib'
+    contents: '$(build.SourcesDirectory)/native/build/Release/libSignPostWrapper.dylib'
     targetFolder: '$(build.SourcesDirectory)/dotnet/Xamarin.Mac.SignPostWrapper/'
     OverWrite: true
     flattenFolders: true
