Working around NuGet bug on ADO

--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.nuspec
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.nuspec
@@ -16,8 +16,8 @@
     <contentFiles>
       <files include="**/*.dylib" buildAction="None" copyToOutput="true" flatten="true" />
     </contentFiles>
-    <license type="expression">MIT</license>
-     <projectUrl>https://github.com/avodovnik/signpostwrapper</projectUrl>
+    <licenseUrl>https://github.com/avodovnik/signpostwrapper/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/avodovnik/signpostwrapper</projectUrl>
   </metadata>
   <files> 
     <file src="**/*.dylib" target="Content" />
