--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -8,8 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Xamarin.Mac.SignPostWrapper</RootNamespace>
     <AssemblyName>Xamarin.Mac.SignPostWrapper</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
 
     <PackageId>Xamarin.Mac.SignPostWrapper</PackageId>
@@ -34,6 +33,7 @@
     <HttpClientHandler></HttpClientHandler>
     <LinkMode></LinkMode>
     <XamMacArch></XamMacArch>
+    <AOTMode>None</AOTMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -49,6 +49,7 @@
     <HttpClientHandler></HttpClientHandler>
     <LinkMode></LinkMode>
     <XamMacArch></XamMacArch>
+    <AOTMode>None</AOTMode>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
