--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Xamarin.Mac.SignPostWrapper</RootNamespace>
     <AssemblyName>Xamarin.Mac.SignPostWrapper</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
 
     <PackageId>Xamarin.Mac.SignPostWrapper</PackageId>
