--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,12 +29,11 @@ steps:
   inputs:
     secureFile: 'signpostwrapper.snk'
 
-
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
     projects: '**/Xamarin.Mac.SignPostWrapper.csproj'
-    arguments: 'Configuration=Release'
+    arguments: '-p:Configuration=Release'
 
 - task: CmdLine@2
   inputs:
@@ -47,11 +46,6 @@ steps:
     configuration: 'Release'
     nobuild: true
     versioningScheme: 'byBuildNumber'
-
-- task: DeleteFiles@1
-  inputs:
-    SourceFolder: $(build.SourcesDirectory)
-    Contents: '**/*.snk'
 
 - task: CopyFiles@2
   inputs:
