Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     OverWrite: true
     flattenFolders: true
 
-- task: DownloadSecureFile@1]
+- task: DownloadSecureFile@1
   name: signpostwrapper
   inputs:
     secureFile: 'signpostwrapper.snk'
