Undocumented workaround for not getting files copied to bin.

--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -16,11 +16,9 @@
         <AssemblyOriginatorKeyFile>signpost.pub.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
     <ItemGroup>
-        <None Remove="libSignPostWrapper.dylib" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="libSignPostWrapper.dylib">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </Content>
+      <None Update="libSignPostWrapper.dylib">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
+      </None>
     </ItemGroup>
 </Project>
