Fixing broken NuGet

--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -16,7 +16,7 @@
         <AssemblyOriginatorKeyFile>signpost.pub.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
     <ItemGroup>
-      <None Update="libSignPostWrapper.dylib">
+      <None Include="libSignPostWrapper.dylib">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         <PackageCopyToOutput>true</PackageCopyToOutput>
       </None>
