Including suggested change.

--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -18,7 +18,8 @@
     <ItemGroup>
       <None Include="libSignPostWrapper.dylib">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        <PackageCopyToOutput>true</PackageCopyToOutput>
+        <PackagePath>lib\netstandard2.0</PackagePath>
+        <Pack>true</Pack>
       </None>
     </ItemGroup>
 </Project>
