--- a/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
+++ b/dotnet/Xamarin.Mac.SignPostWrapper/Xamarin.Mac.SignPostWrapper.csproj
@@ -18,8 +18,8 @@
     <ItemGroup>
       <None Include="libSignPostWrapper.dylib">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        <PackagePath>lib\netstandard2.0</PackagePath>
         <Pack>true</Pack>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
       </None>
     </ItemGroup>
 </Project>
